# FARD-Math-Primitives

./: ARITH_CORE_ABI.md  ARITH_CORE_SPEC.md  Cargo.toml  README.md
examples/: demo.rs
src/: bignum.rs  lib.rs  runtime.rs
